# pro

./: .gitlab-ci.yml  CODE_OF_CONDUCT.adoc  CONTRIBUTING.md  LICENSE  README.md  RELEASES.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release-bot.yml
abi/: Cargo.toml
abi/src/: lib.rs
core/: Cargo.toml
crates/allocator/: Cargo.toml
crates/allocator/src/: lib.rs
crates/env/: Cargo.toml
crates/env/src/: api.rs  arithmetic.rs  backend.rs  chain_extension.rs  lib.rs  topics.rs  types.rs
crates/env/src/call/: call_builder.rs  create_builder.rs
crates/env/src/engine/: mod.rs
crates/env/src/engine/off_chain/: call_data.rs  impls.rs  test_api.rs  tests.rs
crates/env/src/engine/off_chain/db/: accounts.rs  console.rs  exec_context.rs
crates/env/src/engine/on_chain/: buffer.rs  ext.rs  impls.rs
crates/lang/: Cargo.toml
crates/lang/codegen/: Cargo.toml
crates/lang/codegen/src/: lib.rs  traits.rs
crates/lang/codegen/src/generator/: chain_extension.rs  contract.rs  cross_calling.rs  dispatch.rs  env.rs  events.rs  item_impls.rs  metadata.rs  mod.rs  pro_test.rs  storage.rs  trait_def.rs
crates/lang/ir/: Cargo.toml
crates/lang/ir/src/: lib.rs
crates/lang/ir/src/ast/: attr_args.rs  mod.rs
crates/lang/ir/src/ir/: attrs.rs  chain_extension.rs  config.rs  contract.rs  idents_lint.rs  item_mod.rs  mod.rs  pro_test.rs  trait_def.rs  utils.rs
crates/lang/ir/src/ir/item/: event.rs  mod.rs  storage.rs  tests.rs
crates/lang/ir/src/ir/item_impl/: callable.rs  constructor.rs  impl_item.rs  iter.rs  message.rs  mod.rs  tests.rs
crates/lang/macro/: Cargo.toml
crates/lang/macro/src/: chain_extension.rs  contract.rs  lib.rs  pro_test.rs  trait_def.rs
crates/lang/macro/tests/: compile_tests.rs  unique_topics.rs
crates/lang/macro/tests/ui/chain_extension/: E-01-simple.rs
crates/lang/macro/tests/ui/fail/: C-00-constructor-self-ref.rs  C-00-constructor-self-ref.stderr  C-01-constructor-self-mut.rs  C-01-constructor-self-mut.stderr  C-02-constructor-self-val.rs  C-02-constructor-self-val.stderr  C-03-constructor-missing-return.rs  C-03-constructor-missing-return.stderr  C-04-missing-constructor.rs  C-04-missing-constructor.stderr  C-10-async-constructor.rs  C-10-async-constructor.stderr  C-11-unsafe-constructor.rs  C-11-unsafe-constructor.stderr  C-12-const-constructor.rs  C-12-const-constructor.stderr  C-13-abi-constructor.rs  C-13-abi-constructor.stderr  C-14-payable-constructor.rs  C-14-payable-constructor.stderr  C-15-payable-trait-constructor.rs  C-15-payable-trait-constructor.stderr  H-01-invalid-dyn-alloc.rs  H-01-invalid-dyn-alloc.stderr  H-02-invalid-as-dependency.rs  H-02-invalid-as-dependency.stderr  H-03-use-forbidden-idents.rs  H-03-use-forbidden-idents.stderr  M-01-missing-message.rs  M-01-missing-message.stderr  M-02-message-missing-self-arg.rs  M-02-message-missing-self-arg.stderr  M-03-message-returns-self.rs  M-03-message-returns-self.stderr  M-04-message-returns-non-codec.rs  M-04-message-returns-non-codec.stderr  M-05-message-invalid-selector.rs  M-05-message-invalid-selector.stderr  M-10-method-unknown-pro-marker.rs  M-10-method-unknown-pro-marker.stderr  (+12 more)
crates/lang/macro/tests/ui/pass/: 01-noop-contract.rs  02-flipper-contract.rs  03-incrementer-contract.rs  04-erc20-contract.rs  05-erc721-contract.rs  06-non-pro-items.rs  07-flipper-as-dependency.rs  08-static-env.rs  09-derive-for-storage.rs  10-alias-storage-struct-impl.rs
crates/lang/src/: chain_extension.rs  contract.rs  cross_calling.rs  dispatcher.rs  env_access.rs  events.rs  lib.rs  traits.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs  specs.rs  tests.rs
crates/metadata/src/layout/: mod.rs  tests.rs
crates/prelude/: Cargo.toml
crates/prelude/src/: lib.rs
crates/primitives/: Cargo.toml
crates/primitives/benches/: bench.rs
crates/primitives/src/: key.rs  lib.rs
crates/storage/: Cargo.toml
crates/storage/benches/: bench_binary_heap.rs  bench_bitstash.rs  bench_hashmap.rs  bench_lazy.rs  bench_stash.rs  bench_vec.rs
crates/storage/derive/: Cargo.toml
crates/storage/derive/src/: packed_layout.rs  spread_layout.rs  storage_layout.rs
crates/storage/derive/src/tests/: packed_layout.rs  spread_layout.rs  storage_layout.rs
crates/storage/src/: hashmap_entry_api_tests.rs  lib.rs  memory.rs  pack.rs  test_utils.rs
crates/storage/src/alloc/: allocation.rs  allocator.rs  init.rs  mod.rs  tests.rs
crates/storage/src/alloc/boxed/: impls.rs  mod.rs  storage.rs  tests.rs
crates/storage/src/collections/binary_heap/: children.rs  children_vec.rs  mod.rs  reverse.rs  storage.rs  tests.rs
crates/storage/src/collections/bitstash/: counts.rs  fuzz_tests.rs  mod.rs  storage.rs  tests.rs
crates/storage/src/collections/bitvec/: bits256.rs  storage.rs  tests.rs
crates/storage/src/collections/hashmap/: fuzz_tests.rs  impls.rs  iter.rs  mod.rs  storage.rs  tests.rs
crates/storage/src/collections/smallvec/: storage.rs  tests.rs
crates/storage/src/collections/stash/: mod.rs  storage.rs  tests.rs
crates/storage/src/collections/vec/: storage.rs  tests.rs
crates/storage/src/lazy/: entry.rs  lazy_array.rs  lazy_cell.rs  lazy_hmap.rs  lazy_imap.rs  mod.rs
crates/storage/src/traits/: keyptr.rs  mod.rs  optspec.rs  packed.rs
crates/storage/src/traits/impls/: arrays.rs  collections.rs  fuzz_tests.rs  mod.rs  prims.rs  tuples.rs
crates/storage/src/traits/layout/: impls.rs  mod.rs
examples/: README.md
examples/contract-terminate/: Cargo.toml  lib.rs
examples/contract-transfer/: Cargo.toml  lib.rs
examples/delegator/: Cargo.toml  lib.rs
examples/delegator/accumulator/: Cargo.toml  lib.rs
examples/delegator/adder/: Cargo.toml  lib.rs
examples/delegator/subber/: Cargo.toml  lib.rs
examples/dns/: Cargo.toml  lib.rs
examples/erc20/: Cargo.toml  lib.rs
examples/erc721/: Cargo.toml  lib.rs
examples/flipper/: Cargo.toml  lib.rs
examples/incrementer/: Cargo.toml  lib.rs
examples/multisig_plain/: Cargo.toml  lib.rs
examples/rand-extension/: Cargo.toml  lib.rs
pdsl_core/: Cargo.toml
scripts/: check-examples.sh
(+36 files in other folders)
