[package]
name = "pro_allocator"
version = "3.0.0-rc2"
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
edition = "2018"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tetcoin/pro"
documentation = "https://docs.rs/pro_allocator/"
homepage = "https://www.tetcoin.org/"
description = "[pro!] Bindings to the Wasm heap memory allocator."
keywords = ["wasm", "tetcoin", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
wee_alloc = { version = "0.4", default-features = false }

[features]
default = ["std"]
std = []
