[package]
name = "pro_env"
version = "3.0.0-rc2"
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
edition = "2018"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tetcoin/pro"
documentation = "https://docs.rs/pro_env/"
homepage = "https://www.tetcoin.org/"
description = "[pro!] Low-level interface for interacting with the smart contract Wasm executor."
keywords = ["wasm", "tetcoin", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
pro_metadata = { version = "3.0.0-rc2", path = "../metadata/", default-features = false, features = ["derive"], optional = true }
pro_allocator = { version = "3.0.0-rc2", path = "../allocator/", default-features = false }
pro_primitives = { version = "3.0.0-rc2", path = "../primitives/", default-features = false }
pro_prelude = { version = "3.0.0-rc2", path = "../prelude/", default-features = false }

scale = { package = "tetsy-scale-codec", version = "2.0.1", default-features = false, features = ["derive", "full"] }
derive_more = { version = "0.99", default-features = false, features = ["from", "display"] }
num-traits = { version = "0.2", default-features = false, features = ["i128"] }
cfg-if = "1.0"
paste = "1.0"
arrayref = "0.3"
static_assertions = "1.1"

# Hashes for the off-chain environment.
sha2 = { version = "0.9", optional = true }
sha3 = { version = "0.9", optional = true }
blake2 = { version = "0.9", optional = true }

# Only used in the off-chain environment.
#
# Sadly couldn't be marked as dev-dependency.
# Never use this crate outside of the off-chain environment!
rand = { version = "0.8", default-features = false, features = ["alloc"], optional = true }
tetsy-scale-info = { version = "0.5.1", default-features = false, features = ["derive"], optional = true }
funty = "=2.0.0"

[features]
default = ["std"]
std = [
    "pro_metadata",
    "pro_metadata/std",
    "pro_allocator/std",
    "pro_prelude/std",
    "pro_primitives/std",
    "scale/std",
    "tetsy-scale-info",
    "tetsy-scale-info/std",
    "rand",
    "rand/std",
    "rand/std_rng",
    "num-traits/std",
    # Enables hashing crates for off-chain environment.
    "sha2",
    "sha3",
    "blake2",
]
