[package]
name = "pro_lang"
version = "3.0.0-rc2"
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
edition = "2018"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tetcoin/pro"
documentation = "https://docs.rs/pro_lang/"
homepage = "https://www.tetcoin.org/"
description = "[pro!] Rust based eDSL for writing smart contracts for Substrate"
keywords = ["wasm", "tetcoin", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
pro_env = { version = "3.0.0-rc2", path = "../env", default-features = false }
pro_storage = { version = "3.0.0-rc2", path = "../storage", default-features = false }
pro_primitives = { version = "3.0.0-rc2", path = "../primitives", default-features = false }
pro_metadata = { version = "3.0.0-rc2", path = "../metadata", default-features = false, optional = true }
pro_prelude = { version = "3.0.0-rc2", path = "../prelude/", default-features = false }
pro_lang_macro = { version = "3.0.0-rc2", path = "macro", default-features = false }

scale = { package = "tetsy-scale-codec", version = "2.0.1", default-features = false, features = ["derive", "full"] }
derive_more = { version = "0.99", default-features = false, features = ["from"] }
static_assertions = "1.1"
funty = "=1.1.0"

[features]
default = ["std"]
std = [
    "pro_metadata",
    "pro_metadata/std",
    "pro_prelude/std",
    "pro_primitives/std",
    "pro_env/std",
    "pro_storage/std",
    "pro_lang_macro/std",
    "scale/std",
]
