[package]
name = "pro_prelude"
version = "3.0.0-rc2"
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
edition = "2018"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tetcoin/pro"
documentation = "https://docs.rs/pro_prelude/"
homepage = "https://tetcoin.org/"
description = "[pro!] Common API for no_std and std to access alloc crate types."
keywords = ["wasm", "tetcoin", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]

[dependencies]
cfg-if = "1.0"

[features]
default = ["std"]
std = []
