[package]
name = "pro_primitives"
version = "3.0.0-rc2"
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
edition = "2018"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tetcoin/pro"
documentation = "https://docs.rs/pro_primitives/"
homepage = "https://tetcoin.org/"
description = "[pro!] Fundamental primitive types for pro! smart contracts."
keywords = ["wasm", "tetcoin", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]

[dependencies]
pro_prelude = { version = "3.0.0-rc2", path = "../prelude/", default-features = false }
tiny-keccak = { version = "2.0", features = ["keccak"] }
scale = { package = "tetsy-scale-codec", version = "2.0.1", default-features = false, features = ["derive", "full"] }
tetsy-scale-info = { version = "0.5.1", default-features = false, features = ["derive"], optional = true }
funty = "=1.1.0"

[dev-dependencies]
criterion = "0.3.1"

[features]
default = ["std"]
std = [
    "pro_prelude/std",
    "scale/std",
    "tetsy-scale-info/std",
]

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
