[package]
name = "pro_storage"
version = "3.0.0-rc2"
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
edition = "2018"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tetcoin/pro"
documentation = "https://docs.rs/pro_storage/"
homepage = "https://tetcoin.org/"
description = "[pro!] Data structures to organize and manipulate pro! contract storage."
keywords = ["wasm", "tetcoin", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
pro_env = { version = "3.0.0-rc2", path = "../env/", default-features = false }
pro_metadata = { version = "3.0.0-rc2", path = "../metadata/", default-features = false, features = ["derive"], optional = true }
pro_primitives = { version = "3.0.0-rc2", path = "../primitives/", default-features = false }
pro_storage_derive = { version = "3.0.0-rc2", path = "derive", default-features = false }
pro_prelude = { version = "3.0.0-rc2", path = "../prelude/", default-features = false }

scale = { package = "tetsy-scale-codec", version = "2.0.1", default-features = false, features = ["derive", "full"] }
derive_more = { version = "0.99", default-features = false, features = ["from", "display"] }
tetsy-scale-info = { version = "0.5.1", default-features = false, features = ["derive"], optional = true }
cfg-if = "1.0"
array-init = "2.1"
generic-array = "0.14.1"

# Workaround: we actually just need criterion as a dev-dependency, but
# there is an issue with a doubly included std lib when executing
# `cargo check --no-default-features --target wasm32-unknown-unknown`.
# We haven't found a better solution yet.
criterion = { version = "0.3", optional = true }

funty = "=1.1.0"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
itertools = "0.10"
paste = "1.0"

[features]
default = ["std"]
std = [
    "criterion",
    "pro_metadata",
    "pro_metadata/std",
    "pro_env/std",
    "pro_prelude/std",
    "pro_primitives/std",
    "scale/std",
    "tetsy-scale-info",
    "tetsy-scale-info/std",
]
pro-fuzz-tests = ["std"]

[[bench]]
name = "bench_lazy"
path = "benches/bench_lazy.rs"
harness = false

[[bench]]
name = "bench_vec"
path = "benches/bench_vec.rs"
harness = false

[[bench]]
name = "bench_stash"
path = "benches/bench_stash.rs"
harness = false

[[bench]]
name = "bench_bitstash"
path = "benches/bench_bitstash.rs"
harness = false

[[bench]]
name = "bench_hashmap"
path = "benches/bench_hashmap.rs"
harness = false

[[bench]]
name = "bench_binary_heap"
path = "benches/bench_binary_heap.rs"
harness = false
