[package]
name = "rand_extension"
version = "0.1.0"
authors = ["Hammewang <maggiedong@parity.io>"]
edition = "2018"

[dependencies]
pro_primitives = { path = "../../crates/primitives", default-features = false }
pro_metadata = { path = "../../crates/metadata", default-features = false, features = ["derive"], optional = true }
pro_env = { path = "../../crates/env", default-features = false }
pro_storage = { path = "../../crates/storage", default-features = false }
pro_lang = { path = "../../crates/lang", default-features = false }

scale = { package = "tetsy-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
tetsy-scale-info = { version = "0.5.1", default-features = false, features = ["derive"], optional = true }
funty = "=1.1.0"

[lib]
name = "rand_extension"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "pro_metadata/std",
    "pro_env/std",
    "pro_storage/std",
    "pro_primitives/std",
    "scale/std",
    "tetsy-scale-info",
    "tetsy-scale-info/std",
]
pro-as-dependency = []
