[package]
name = "pro_lang_codegen"
version = "3.0.0-rc2"
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
edition = "2018"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tetcoin/pro"
documentation = "https://docs.rs/pro_lang_codegen/"
homepage = "https://www.tetcoin.org/"
description = "data structures and algorithms for generating pro! IR code"
keywords = ["wasm", "tetcoin", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[lib]
name = "pro_lang_codegen"

[dependencies]
ir = { version = "3.0.0-rc2", package = "pro_lang_ir", path = "../ir", default-features = false }
quote = "1"
syn = { version = "1.0", features = ["parsing", "full", "extra-traits"] }
proc-macro2 = "1.0"
derive_more = { version = "0.99", default-features = false, features = ["from"] }
itertools = "0.10"
either = { version = "1.5", default-features = false }
regex = "1.3"
blake2 = "0.9"
heck = "0.3.1"
funty = "=1.2.0"

[features]
default = ["std"]
std = [
    "itertools/use_std",
    "either/use_std",
    "ir/std"
]
