[package]
name = "pro_lang_ir"
version = "3.0.0-rc2"
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
edition = "2018"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tetcoin/pro"
documentation = "https://docs.rs/pro_lang_ir/"
homepage = "https://tetcoin.org/"
description = "data structures and algorithms for pro! intermediate representation"
keywords = ["wasm", "tetcoin", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[lib]
name = "pro_lang_ir"

[dependencies]
quote = "1"
syn = { version = "1.0", features = ["parsing", "full", "visit", "extra-traits"] }
proc-macro2 = "1.0"
itertools = { version = "0.10", default-features = false }
either = { version = "1.5", default-features = false }
regex = "1.3"
blake2 = "0.9"

[features]
default = ["std"]
std = [
    "itertools/use_std",
    "either/use_std",
]
