[package]
name = "pro_lang_macro"
version = "3.0.0-rc2"
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
edition = "2018"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tetcoin/pro"
documentation = "https://docs.rs/pro_lang_macro/"
homepage = "https://tetcoin.org/"
description = "[pro!] Rust based eDSL for writing smart contracts for Substrate"
keywords = ["wasm", "tetcoin", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
pro_lang_ir = { version = "3.0.0-rc2", path = "../ir", default-features = false }
pro_lang_codegen = { version = "3.0.0-rc2", path = "../codegen", default-features = false }
pro_primitives = { version = "3.0.0-rc2", path = "../../primitives/", default-features = false }

scale = { package = "tetsy-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
syn = "1"
proc-macro2 = "1"

[dev-dependencies]
pro_metadata = { version = "3.0.0-rc2", path = "../../metadata/" }
pro_env = { version = "3.0.0-rc2", path = "../../env/" }
pro_storage = { version = "3.0.0-rc2", path = "../../storage/" }
pro_lang = { version = "3.0.0-rc2", path = ".." }

trybuild = "1.0.24"
tetsy-scale-info = { version = "0.5.1", default-features = false, features = ["derive"] }

funty = "=2.0.0"

[lib]
name = "pro_lang_macro"
proc-macro = true

[features]
default = ["std"]
std = [
    "scale/std",
    "pro_lang_ir/std",
    "pro_primitives/std",
]
