[package]
name = "pro_storage_derive"
version = "3.0.0-rc2"
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
edition = "2018"

license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/tetcoin/pro"
documentation = "https://substrate.dev/substrate-contracts-workshop/#/"
homepage = "https://tetcoin.org/"
description = "[pro!] Derive macros for common pro_storage defined traits."
keywords = ["wasm", "tetcoin", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
synstructure = "0.12.4"

[dev-dependencies]
pro_primitives = { version = "3.0.0-rc2", path = "../../primitives" }
pro_metadata = { version = "3.0.0-rc2", path = "../../metadata" }
pro_storage = { version = "3.0.0-rc2", path = ".." }
