[package]
name = "accumulator"
version = "3.0.0-rc2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
pro_primitives = { version = "3.0.0-rc2", path = "../../../crates/primitives", default-features = false }
pro_metadata = { version = "3.0.0-rc2", path = "../../../crates/metadata", default-features = false, features = ["derive"], optional = true }
pro_env = { version = "3.0.0-rc2", path = "../../../crates/env", default-features = false }
pro_storage = { version = "3.0.0-rc2", path = "../../../crates/storage", default-features = false }
pro_lang = { version = "3.0.0-rc2", path = "../../../crates/lang", default-features = false }

scale = { package = "tetsy-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
tetsy-scale-info = { version = "0.5.1", default-features = false, features = ["derive"], optional = true }
funty = "=1.1.0"

[lib]
name = "accumulator"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "pro_primitives/std",
    "pro_metadata",
    "pro_metadata/std",
    "pro_env/std",
    "pro_storage/std",
    "pro_lang/std",
    "scale/std",
    "tetsy-scale-info",
    "tetsy-scale-info/std",
]
pro-as-dependency = []
